k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-app
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
