k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "python-app.test.com"
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: py-app
            port:
              number: 8080
